--- a/kodely/core/templates/editar_post.html
+++ b/kodely/core/templates/editar_post.html
@@ -63,7 +63,17 @@
   </div>
   <script>
     function format(command, value = null) {
-      document.execCommand(command, false, value);
+      if (command === 'foreColor') {
+        const selection = window.getSelection();
+        if (selection.rangeCount > 0) {
+          const range = selection.getRangeAt(0);
+          const span = document.createElement('span');
+          span.style.color = value;
+          range.surroundContents(span);
+        }
+      } else {
+        document.execCommand(command, false, value);
+      }
     }
 
     function insertCodeBlock() {
